e2e-tests/conf/cmctl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cmctl
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cmctl
  template:
    metadata:
      labels:
        name: cmctl
    spec:
      serviceAccountName: cmctl
      containers:
        - name: cmctl
          image: docker.io/alpine/curl:latest
          imagePullPolicy: Always
          command:
          - /bin/sh
          - -c
          - |
            arch="$(uname -m)"; case "$arch" in aarch64|arm64) arch=arm64 ;; *) arch=amd64 ;; esac
            curl -fsSL -o /tmp/cmctl "https://github.com/cert-manager/cmctl/releases/download/v2.4.1/cmctl_linux_${arch}" \
            && chmod +x /tmp/cmctl \
            && sleep 100500
      restartPolicy: Always
