e2e-tests/conf/block-external-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-external-egress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: test-cluster

  policyTypes:
    - Egress

  # Only blocks egress traffic to external destinations, allowing traffic within the cluster.
  egress:
    - to:
        - namespaceSelector: {}
