e2e-tests/conf/network-policy-block-external.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-external-access

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: standby-cluster
      postgres-operator.crunchydata.com/role: primary

  policyTypes:
    - Egress

  egress:
    - to:
        - namespaceSelector: {}
          podSelector: {}
      
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    - ports:
        - protocol: TCP
          port: 6443
